src/test/deca/codegen/valid/extendClassNew.deca
class A {
    int x = 1;
}

class B extends A {
    int y = 2;
}

{
    A a = new A();
    B b = new B();
    println("salut");
    //println("a.x = ", a.x);
}